Ingress/prod-ingress-manifest.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: app-ingress-group 
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /prod
            pathType: Prefix
            backend:
              service:
                name: my-app-service
                port:
                  number: 8000
